--- a/app/sass/_header/_header.sass
+++ b/app/sass/_header/_header.sass
@@ -1,5 +1,5 @@
 header
-  padding: 0 0 114px
+  padding: 0 20px 114px
   background: url("../img/header_bg.jpg") center -50px no-repeat fixed
   color: #fff
 
