--- a/app/index.pug
+++ b/app/index.pug
@@ -54,32 +54,33 @@ body
                 p #[b The deadline] for the completion of the entire cottage town is the II quarter of 2022
 
     main
-        section._1_about-project.container
-            h2.h2-title About project
-            .about-project__wrap
-                .about-project__wrap-inner
-                    .about-project__about-company
-                        p Elite closed cottage town in Nur-Sultan consisting of:
-                        h3 36 cottages:
-                        ul
-                            li
-                                p - 440 yard² on 1195 yard²
-                            li
-                                p - 214 yard² on 597 yard²
-                    .about-project__about-company
-                        h3 About company
-                        p “MM Group” Group of Construction Companies is a modern and dynamically developing group of companies that provides a wide range of services in the construction business from design to turnkey delivery of facilities. She began her activities in the construction business in 2013 and has firmly established herself as a reliable Kazakhstani construction company not only in the territory of the Republic of Kazakhstan, but also abroad. The founder and CEO of the group of construction companies "MM Group" is Moldir Suyunshali.
-                    .about-project__about-company
-                        h3 Mission of company
-                        p The priority of the group of construction companies "MM Group" is a professional approach with the use of innovative solutions in the construction of objects under construction, an experienced team, high-quality materials and timeliness of delivery of objects with an affordable opportunity to purchase not only housing, but also other real estate objects.
-                .about-project__wrap-inner
-                    .about-project__company-logo__box
-                        img.about-project__company-logo__img(src="./img/1_about-project_img.jpg")
-                        .about-project__company-logo__bg-color
-                        .about-project__company-logo__bg-dots
-                    .about-project__about-company
-                        h3 Company goal
-                        p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
+        section._1_about-project
+            .container
+                h2.h2-title About project
+                .about-project__wrap
+                    .about-project__wrap-inner
+                        .about-project__about-company
+                            p Elite closed cottage town in Nur-Sultan consisting of:
+                            h3 36 cottages:
+                            ul
+                                li
+                                    p - 440 yard² on 1195 yard²
+                                li
+                                    p - 214 yard² on 597 yard²
+                        .about-project__about-company
+                            h3 About company
+                            p “MM Group” Group of Construction Companies is a modern and dynamically developing group of companies that provides a wide range of services in the construction business from design to turnkey delivery of facilities. She began her activities in the construction business in 2013 and has firmly established herself as a reliable Kazakhstani construction company not only in the territory of the Republic of Kazakhstan, but also abroad. The founder and CEO of the group of construction companies "MM Group" is Moldir Suyunshali.
+                        .about-project__about-company
+                            h3 Mission of company
+                            p The priority of the group of construction companies "MM Group" is a professional approach with the use of innovative solutions in the construction of objects under construction, an experienced team, high-quality materials and timeliness of delivery of objects with an affordable opportunity to purchase not only housing, but also other real estate objects.
+                    .about-project__wrap-inner
+                        .about-project__company-logo__box
+                            img.about-project__company-logo__img(src="./img/1_about-project_img.jpg")
+                            .about-project__company-logo__bg-color
+                            .about-project__company-logo__bg-dots
+                        .about-project__about-company
+                            h3 Company goal
+                            p Strengthening the status of a company that is able to provide consumers with affordable and high-quality real estate on time. Development, reliability and quality!
 
         section._2_slider
             .container
@@ -108,18 +109,19 @@ body
                         img(src="./img/arrow-right.svg")
 
 
-        section._3_location.container
-            .location__content
-                h2.h2-title Location
-                p Closed cottage village Nura Elite is located in an elite and promising area of the capital, next to the green belt in the neighborhood of Vella Village.
-                p Nura Elite is a great space for solitude and active family life in harmony with nature, without city noise and with convenient transport interchange.
-            .location__map-box
-                img.location__map__img(src="./img/3_location_img-map.jpg" alt="Map" title="Map")
-                div.location__map__bg-color
-                .location__map__bg-dots
+        section._3_location
+            .container
+                .location__content
+                    h2.h2-title Location
+                    p Closed cottage village Nura Elite is located in an elite and promising area of the capital, next to the green belt in the neighborhood of Vella Village.
+                    p Nura Elite is a great space for solitude and active family life in harmony with nature, without city noise and with convenient transport interchange.
+                .location__map-box
+                    img.location__map__img(src="./img/3_location_img-map.jpg" alt="Map" title="Map")
+                    div.location__map__bg-color
+                    .location__map__bg-dots
 
 
-        //section._4_advantages
+        section._4_advantages
             .container
                 img.advantages__dots(src="./img/dots.svg")
                 img.advantages__bg(src="./img/4_advantages_bg.svg")
@@ -127,68 +129,77 @@ body
                     h2.h2-title The main advantages #[br] of the town
                     ul
                         li
-                            img(src="./img/4_advantages_icon-map.svg")
+                            div
+                                img(src="./img/4_advantages_icon-map.svg")
                             p Favorable #[br] location
                         li
-                            img(src="./img/4_advantages_icon-fencing.svg")
+                            div
+                                img(src="./img/4_advantages_icon-fencing.svg")
                             p The town is fenced around the perimeter with a 3-meter fence, equipped with a 24/7 video surveillance system
                         li
-                            img(src="./img/4_advantages_icon-protection.svg")
+                            div
+                                img(src="./img/4_advantages_icon-protection.svg")
                             p Protected #[br] area
                         li
-                            img(src="./img/4_advantages_icon-armchair.svg")
+                            div
+                                img(src="./img/4_advantages_icon-armchair.svg")
                             p Here you will feel privacy, security and comfort
-                    .advantages__imb-box
+                    .advantages__img-box
                         img(src="./img/4_advantages_img.jpg" alt="Protected area" title="Protected area")
                     ul
                         li
-                            img(src="./img/4_advantages_icon-house.svg")
+                            div
+                                img(src="./img/4_advantages_icon-house.svg")
                             p Individual plots are fenced with 2-meter fences
                         li
-                            img(src="./img/4_advantages_icon-phone.svg")
+                            div
+                                img(src="./img/4_advantages_icon-phone.svg")
                             p Own application
                     ul
                         li
-                            img(src="./img/4_advantages_icon-wall.svg")
+                            div
+                                img(src="./img/4_advantages_icon-wall.svg")
                             p Each owner of the cottage is given the opportunity to build additional buildings on his #[br] land plot: a bathhouse, a sauna, a summer kitchen, etc.
 
 
-        //section._5_why-nura.container
-            h2.h2-title Why NURA ELITE?
-            .why__nura__content-box
-                .why-nura__img-box
-                    img.why-nura__img(src="./img/5_why-nura_img.jpg")
-                    .why-nura__bg-color
-                    .why-nura__bg-dots
-                ul
-                    li
-                        div
-                            img(src="./img/5_why-nura_icon-lightning.svg")
-                        span
-                            b Energy efficiency
-                            p Houses keep warm in winter and cool in summer
-                    li
-                        div
-                            img(src="./img/4_advantages_icon-protection.svg")
-                        span
-                            b Security
-                            p Closed campus with round-the-clock video surveillance
-                ul
-                    li
-                        div
-                            img(src="./img/5_why-nura_icon-hends.svg")
-                        span
-                            b Ecologically clean area
-                            p The town is located near the forest belt and the village of Nura-Yesil
-                    li
-                        div
-                            img(src="./img/5_why-nura_icon-tear.svg")
-                        span
-                            b Communications
-                            p Centralized water supply, power supply and sewerage.
-                            p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
+        section._5_why-nura
+            .container
+                h2.h2-title Why NURA ELITE?
+                .why-nura__content-box
+                    .why-nura__img-box
+                        img.why-nura__img(src="./img/5_why-nura_img.jpg")
+                        .why-nura__bg-color
+                        .why-nura__bg-dots
+                    .why-nura__content-box__inner
+                        ul
+                            li
+                                div
+                                    img(src="./img/5_why-nura_icon-lightning.svg")
+                                span
+                                    b Energy efficiency
+                                    p Houses keep warm in winter and cool in summer
+                            li
+                                div
+                                    img(src="./img/4_advantages_icon-protection.svg")
+                                span
+                                    b Security
+                                    p Closed campus with round-the-clock video surveillance
+                        ul
+                            li
+                                div
+                                    img(src="./img/5_why-nura_icon-hends.svg")
+                                span
+                                    b Ecologically clean area
+                                    p The town is located near the forest belt and the village of Nura-Yesil
+                            li
+                                div
+                                    img(src="./img/5_why-nura_icon-tear.svg")
+                                span
+                                    b Communications
+                                    p Centralized water supply, power supply and sewerage.
+                                    p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
 
-        //section._6_technologies.container
+        section._6_technologies.container
             h2.h2-title Building technology
             .technologies__content-box
                 ul
