responsive(no burger)

--- a/app/index.pug
+++ b/app/index.pug
@@ -199,83 +199,85 @@ body
                                     p Centralized water supply, power supply and sewerage.
                                     p The heating system and hot water is one common gas tank for the entire town, functioning at the expense of gas.
 
-        section._6_technologies.container
-            h2.h2-title Building technology
-            .technologies__content-box
+        section._6_technologies
+            .container
+                h2.h2-title Building technology
+                .technologies__content-box
+                    ul
+                        li
+                            img.technology_img-1(src="./img/6_technology_img-1.png" alt="Wall construction" title="Wall construction")
+                            h3 Wall construction
+                            p Double burnt red brickwork - 38/40 cm, insulated with mineral board - 10 cm, and cladding with HPL and FBC panel
+                        li
+                            img.technology_img-3(src="./img/6_technology_img-3.png" alt="Door construction" title="Door construction")
+                            h3 Door construction
+                            p IZO TERMO technology.
+                            The doors do not touch the outer ones. Between them is an insulator - a shield made of Portuguese cork oak 8 mm thick. IZO TERMO eliminates the "cold bridge" and does not allow heat to leave the house. With this technology, you do not need a vestibule and a second door.
+                        li
+                            img.technology_img-5(src="./img/6_technology_img-5.png" alt="Façade construction" title="Façade construction")
+                            h3 Façade construction
+                            p HPL panel is a high quality construction product for durable facade cladding. Weather resistance +180s/-180s with high weatherproofing effect. This protection is provided by the use of dual-curing acrylic polyurethane resins. Refers to environmentally friendly materials.
+                    ul
+                        li
+                            img.technology_img-2(src="./img/6_technology_img-2.png" alt="Window construction" title="Window construction")
+                            h3 Window construction
+                            p High environmental friendliness, safety, reliability and durability, enhanced heat-insulating capacity, which is provided by a five-chamber structure of a profile with triple glazing and sound insulation (the Helios system is designed for 44 mm thick double-glazed windows with an air gap of 16 mm, passing through which low-frequency noises lose their intensity, which is very valued by residents) using FUNKE technology
+                        li
+                            img.technology_img-4(src="./img/6_technology_img-4.png" alt="Roof structure" title="Roof structure")
+                            h3 Roof structure
+                            p Flexible tile TECHNONICOL SHINGLAS is a guarantee of comfort and safety of your home. Houses with a roof made of TECHNONICOL SHINGLAS shingles captivate with their harmony and grace. The collections are distinguished by a variety of shapes and colors.
+                        li
+                            img.technology_img-6(src="./img/6_technology_img-6.png" alt="" title="")
+                            h3 Foundation blocks wall
+                            p FBC is a unique and high-quality building material for durable facade cladding.
+                                | High frost resistance, fire safety, good sound and heat insulation, tightness, increased strength, weather resistance.
+                                | for both humans and the environment. They do not contain asbestos, consist of environmentally friendly natural ingredients: 82-85% cement, wood fiber, weight loss additives, organosilicon compounds
+                .technologies__download-presentation
+                    h2.h2-title Download presentation
+                    p Leave your contacts and we will send you
+                    form
+                        input(type="text" placeholder="Your name")
+                        input(type="tel" placeholder="Phone number")
+                        input(type="submit")
+                .technologies__bg-logo
+                    img(src="./img/bg-logo__cherry.svg")
+
+        section._7_payments
+            .container
+                h2.h2-title Payment methods
                 ul
                     li
-                        img(src="./img/6_technology_img-1.png" alt="Wall construction" title="Wall construction")
-                        h3 Wall construction
-                        p Double burnt red brickwork - 38/40 cm, insulated with mineral board - 10 cm, and cladding with HPL and FBC panel
+                        img.payments_icon-1(src="./img/7_payments_icon-1.svg")
+                        p Getting a loan through #[br] “ЖилСтройСберБанк”
                     li
-                        img(src="./img/6_technology_img-3.png" alt="Door construction" title="Door construction")
-                        h3 Door construction
-                        p IZO TERMO technology.
-                        The doors do not touch the outer ones. Between them is an insulator - a shield made of Portuguese cork oak 8 mm thick. IZO TERMO eliminates the "cold bridge" and does not allow heat to leave the house. With this technology, you do not need a vestibule and a second door.
+                        img.payments_icon-2(src="./img/7_payments_icon-2.svg")
+                        p Obtaining #[br] interest-free installments #[br] from the developer #[br] NURA ELITE
                     li
-                        img(src="./img/6_technology_img-5.png" alt="Façade construction" title="Façade construction")
-                        h3 Façade construction
-                        p HPL panel is a high quality construction product for durable facade cladding. Weather resistance +180s/-180s with high weatherproofing effect. This protection is provided by the use of dual-curing acrylic polyurethane resins. Refers to environmentally friendly materials.
-                ul
+                        img.payments_icon-3(src="./img/7_payments_icon-3.svg")
+                        p Kazakhstan Mortgage #[br] Company «Орда»
                     li
-                        img(src="./img/6_technology_img-2.png" alt="Window construction" title="Window construction")
-                        h3 Window construction
-                        p High environmental friendliness, safety, reliability and durability, enhanced heat-insulating capacity, which is provided by a five-chamber structure of a profile with triple glazing and sound insulation (the Helios system is designed for 44 mm thick double-glazed windows with an air gap of 16 mm, passing through which low-frequency noises lose their intensity, which is very valued by residents) using FUNKE technology
-                    li
-                        img(src="./img/6_technology_img-4.png" alt="Roof structure" title="Roof structure")
-                        h3 Roof structure
-                        p Flexible tile TECHNONICOL SHINGLAS is a guarantee of comfort and safety of your home. Houses with a roof made of TECHNONICOL SHINGLAS shingles captivate with their harmony and grace. The collections are distinguished by a variety of shapes and colors.
-                    li
-                        img(src="./img/6_technology_img-6.png" alt="" title="")
-                        h3 Foundation blocks wall
-                        p FBC is a unique and high-quality building material for durable facade cladding.
-                            | High frost resistance, fire safety, good sound and heat insulation, tightness, increased strength, weather resistance.
-                            | for both humans and the environment. They do not contain asbestos, consist of environmentally friendly natural ingredients: 82-85% cement, wood fiber, weight loss additives, organosilicon compounds
-            .technologies__download-presentation
-                h2.h2-title Download presentation
-                p Leave your contacts and we will send you
-                form
-                    input(type="text" placeholder="Your name")
-                    input(type="tel" placeholder="Phone number")
-                    input(type="submit")
-            .technologies__bg-logo
-                img(src="./img/bg-logo__cherry.svg")
+                        img.payments_icon-4(src="./img/7_payments_icon-4.svg")
+                        p Payment with #[br] cryptocurrency (Bitcoin)
+                .payments__address
+                    .payments__address__map
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2503.755751349219!2d71.42242228172763!3d51.13141316940208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424586a04e901251%3A0x5047617e2afb5feb!2z0JjQt9GD0LzRgNGD0LTQvdGL0Lkg0LrQsi3Quywg0YPQuy4g0JTQuNC90LzRg9GF0LDQvNC10LTQsCDQmtGD0L3QsNC10LLQsCAxMCwg0J3Rg9GALdCh0YPQu9GC0LDQvSAwMjAwMDAsINCa0LDQt9Cw0YXRgdGC0LDQvQ!5e0!3m2!1sru!2sua!4v1646328085084!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    .payments__address__contacts
+                        h2.h2-title Contacts
+                        p st. Kunaeva 10, business center "Emerald", block - A, floor 1
+                        .payments__address__contacts-box
+                            ul
+                                li
+                                    img(src="./img/phone-black.svg")
+                                    a(href="tel:+77000011888") +7 (700) 001-18-88
+                                li
+                                    img(src="./img/email-black.svg")
+                                    a(href="mailto:info@nuramm.kz") info@nuramm.kz
+                                li
+                                    img(src="./img/inst-black.svg")
+                                    a(href="https://www.instagram.com/nura_premier/" target="_blank") @nura.premier
+                            img(src="./img/7_payments_qr-code.svg")
 
-        //section._7_payments.container
-            h2.h2-title Payment methods
-            ul
-                li
-                    img(src="./img/7_payments_icon-1.svg")
-                    p Getting a loan through #[br] “ЖилСтройСберБанк”
-                li
-                    img(src="./img/7_payments_icon-2.svg")
-                    p Obtaining #[br] interest-free installments #[br] from the developer #[br] NURA ELITE
-                li
-                    img(src="./img/7_payments_icon-3.svg")
-                    p Kazakhstan Mortgage #[br] Company «Орда»
-                li
-                    img(src="./img/7_payments_icon-4.svg")
-                    p Payment with #[br] cryptocurrency (Bitcoin)
-            .payments__address
-                .payments__address__map
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2503.755751349219!2d71.42242228172763!3d51.13141316940208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x424586a04e901251%3A0x5047617e2afb5feb!2z0JjQt9GD0LzRgNGD0LTQvdGL0Lkg0LrQsi3Quywg0YPQuy4g0JTQuNC90LzRg9GF0LDQvNC10LTQsCDQmtGD0L3QsNC10LLQsCAxMCwg0J3Rg9GALdCh0YPQu9GC0LDQvSAwMjAwMDAsINCa0LDQt9Cw0YXRgdGC0LDQvQ!5e0!3m2!1sru!2sua!4v1646328085084!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                .payments__address__contacts
-                    h2.h2-title Contacts
-                    p st. Kunaeva 10, business center "Emerald", block - A, floor 1
-                    .payments__address__contacts-box
-                        ul
-                            li
-                                img(src="./img/phone-black.svg")
-                                a(href="tel:+77000011888") +7 (700) 001-18-88
-                            li
-                                img(src="./img/email-black.svg")
-                                a(href="mailto:info@nuramm.kz") info@nuramm.kz
-                            li
-                                img(src="./img/inst-black.svg")
-                                a(href="https://www.instagram.com/nura_premier/" target="_blank") @nura.premier
-                        img(src="./img/7_payments_qr-code.svg")
-
-    //footer
+    footer
         .container
             ul
                 li
