--- a/app/sass/_5_why-nura/_media_5.sass
+++ b/app/sass/_5_why-nura/_media_5.sass
@@ -8,8 +8,6 @@
           margin-bottom: 40px
 
         .why-nura__content-box
-          display: initial
-
           .why-nura__img-box
             padding-bottom: 40px
             width: 100%
@@ -29,6 +27,13 @@
             ul
               padding: 0
               max-width: 50%
+
+@include media_laptop
+  main
+    section._5_why-nura
+      .container
+        .why-nura__content-box
+          display: initial
 
 @include media_tablet-mobile
   main
