--- a/app/sass/_6_technologies/_6_technologies.sass
+++ b/app/sass/_6_technologies/_6_technologies.sass
@@ -1,71 +1,100 @@
 main
-  section._6_technologies.container
+  section._6_technologies
     padding-top: 127px
-    position: relative
-    z-index: 2
 
-    h2
-      margin-bottom: 43px
-      text-align: center
 
-    .technologies__content-box
-      +display(flex)
-      justify-content: space-between
-
-      ul:last-child
-        margin-top: 55px
-
-      ul
-        max-width: 500px
-
-        li
-          margin-bottom: 80px
-
-          img
-            margin-bottom: 32px
-
-          h3
-            margin-bottom: 12px
-            font-size: $font20px
-            font-weight: 700
-
-          p
-            font-size: $font18px
-            line-height: $font20px
-
-    .technologies__download-presentation
-      padding: 70px 150px
-      border: 8px #842231 solid
-      border-radius: 8px
+    .container
+      position: relative
+      z-index: 2
 
       h2
-        margin-bottom: 12px
-
-      p
-        margin-bottom: 36px
-        font-size: 1.3125rem
-        font-weight: 400
+        margin-bottom: 43px
         text-align: center
 
-      form
+      .technologies__content-box
         +display(flex)
+        justify-content: space-between
 
-        input
-          padding: 32px 0 32px 58px
-          max-width: 280px
-          width: 100%
-          color: #7E868E
-          background-color: #E5E5E5
-          border-radius: 8px
-
-
-        input:not(:last-child)
+        ul:first-child
           margin-right: 20px
 
-        input:last-child
-          padding: 32px 0
-          font-size: $font18px
-          font-weight: 500
-          color: #ffffff
-          background-color: #842231
-          cursor: pointer
+        ul:last-child
+          margin-top: 55px
+
+        ul
+          max-width: 50%
+          width: 100%
+          li
+            margin-bottom: 80px
+
+            img
+              width: 100%
+              margin-bottom: 32px
+
+            img.technology_img-1
+              max-width: 188px
+
+            img.technology_img-3
+              max-width: 216px
+
+            img.technology_img-5
+              max-width: 322px
+
+            img.technology_img-2
+              max-width: 230px
+
+            img.technology_img-4,
+            img.technology_img-6
+              max-width: 339px
+
+            h3
+              margin-bottom: 12px
+              font-size: $font20px
+              font-weight: 700
+
+            p
+              font-size: $font18px
+              line-height: $font20px
+
+      .technologies__download-presentation
+        padding: 70px 150px
+        border: 8px #842231 solid
+        border-radius: 8px
+
+        h2
+          margin-bottom: 12px
+
+        p
+          margin-bottom: 36px
+          font-size: 1.3125rem
+          font-weight: 400
+          text-align: center
+
+        form
+          +display(flex)
+
+          input
+            padding: 32px 0 32px 58px
+            max-width: 280px
+            width: 100%
+            color: #7E868E
+            background-color: #E5E5E5
+            border-radius: 8px
+
+
+          input:not(:last-child)
+            margin-right: 20px
+
+          input:last-child
+            padding: 32px 0
+            font-size: $font18px
+            font-weight: 500
+            color: #ffffff
+            background-color: #842231
+            cursor: pointer
+
+  .technologies__bg-logo
+    position: absolute
+    bottom: -284px
+    right: -43px
+    z-index: -1
