responsive(no burger)[fixed imgs position]

--- a/app/sass/_1_about-project/_media_1.sass
+++ b/app/sass/_1_about-project/_media_1.sass
@@ -33,7 +33,6 @@
   main
     section._1_about-project
       .container
-
         .about-project__wrap
           display: initial
 
@@ -55,3 +54,17 @@
               .about-project__company-logo__bg-color,
               .about-project__company-logo__bg-dots
                 position: initial
+
+@include media_mobile
+  main
+    section._1_about-project
+      .container
+        .about-project__wrap
+          .about-project__wrap-inner:last-child
+            .about-project__company-logo__box
+              margin: 0 -5% 40px -5%
+              max-width: initial
+              width: 109.6%
+
+              img.about-project__company-logo__img
+                width: 100%
